--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,8 @@ buildscript {
 apply plugin: 'net.minecraftforge.gradle.forge'
 
 version = "6.0.0"
-group= "the_fireplace.nabb" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "NewAgeBeeBreeding"
+group= "the_fireplace.nabb"
+archivesBaseName = "NewAgeBeeBreeding-Forge"
 
 minecraft {
     version = "1.9.4-12.17.0.1963"
