--- a/build.gradle
+++ b/build.gradle
@@ -5,20 +5,37 @@ buildscript {
             name = "forge"
             url = "http://files.minecraftforge.net/maven"
         }
+        maven {
+            name = "Modmuss50"
+            url = "http://maven.modmuss50.me/"
+        }
     }
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
+        classpath 'ModsIOUpload:ModsIOUpload:+'
     }
 }
+plugins {
+    id "com.matthewprenger.cursegradle" version "1.0.8"
+}
 apply plugin: 'net.minecraftforge.gradle.forge'
+apply plugin: 'net.cazzar.gradle.modsio'
+apply plugin: 'maven'
+apply plugin: 'maven-publish'
 
-version = "6.0.0"
+version = "1.0.0"
 group= "the_fireplace.nabb"
-archivesBaseName = "NewAgeBeeBreeding-Forge"
+archivesBaseName = "NewAgeBeeBreeding-1.9.4"
+
+allprojects {
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
+}
 
 minecraft {
     version = "1.9.4-12.17.0.1963"
     runDir = "run"
+    replace '${version}', project.version
     mappings = "snapshot_20160518"
     useDepAts = true
 }
@@ -46,5 +63,113 @@ processResources
         
     from(sourceSets.main.resources.srcDirs) {
         exclude 'mcmod.info'
+    }
+}
+
+task showVersion {
+    description "Displays the current version"
+    group "help"
+    
+    compileJava.dependsOn showVersion
+    deobfCompileDummyTask.dependsOn showVersion
+    extractMcpMappings.dependsOn showVersion
+  
+    doLast {
+        def versionFile = new File(buildDir, '.version');
+    
+        versionFile.getParentFile().mkdirs();
+        versionFile.text = version;
+    }
+    
+    outputs.upToDateWhen { false }
+}
+
+task deobfJar(type: Jar) {
+    from sourceSets.main.output
+    classifier = 'deobf'
+}
+
+artifacts {
+    archives jar
+    archives deobfJar
+    archives sourceJar
+}
+
+curseforge {
+  apiKey = project.hasProperty("curseForgeApiKey")? project.curseForgeApiKey : "empty"
+  project {
+    id = '246221'
+    changelog = file('changelog.txt')
+    releaseType = 'release'
+    addGameVersion '1.9.4'
+	addGameVersion 'Java 8'
+    mainArtifact(jar) {
+        displayName = jar.archiveName.replace(".jar", "")
+        relations{
+			requiredLibrary 'forestry'
+		}
+    }
+    addArtifact(sourceJar) {
+        displayName = sourceJar.archiveName.replace(".jar", "")
+        changelog = "*This is a file for mod developers. If you don't know what to do with it, don't use it!*"
+    }
+    addArtifact(deobfJar) {
+        displayName = deobfJar.archiveName.replace(".jar", "")
+        changelog = "*This is a file for mod developers. If you don't know what to do with it, don't use it!*"
+    }
+  }
+}
+
+modsIO {
+    key = project.hasProperty("modsioApiKey")? project.modsioApiKey : "empty"
+    project{
+		artifact = new File(jar.destinationDir, archivesBaseName+"-"+version+".jar")
+		modid = "0000"
+		minecraft = "1.9.4"
+		try{changelog = file('changelog.txt').text}catch(Exception e){changelog=""}
+		tag = ""
+		current = true
+    }
+}
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            if (project.hasProperty("local_maven")) {
+                repository(url: "file://${local_maven}")
+                pom {
+                    groupId = project.group
+                    version = project.version
+                    artifactId = project.archivesBaseName
+                    project {
+                        name project.archivesBaseName
+                        packaging "jar"
+                        description "NewAgeBeeBreeding"
+                        url "https://github.com/The-Fireplace/NABB"
+                        issueManagement {
+                            system "github"
+                            url "https://github.com/The-Fireplace/NABB/issues"
+                        }
+                        licenses {
+                            license {
+                                name "License"
+                                url "https://github.com/The-Fireplace/NABB/blob/master/LICENSE"
+                                distribution "repo"
+                            }
+                        }
+                        developers {
+                            developer {
+                                id "fireplace"
+                                name "The_Fireplace"
+                                roles {
+                                    role "owner"
+                                    role "developer"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
     }
 }
