--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ apply plugin: 'maven-publish'
 
 version = "1.0.0"
 group= "the_fireplace.nabb"
-archivesBaseName = "NewAgeBeeBreeding-1.9.4"
+archivesBaseName = "NewAgeBeeBreeding-1.10.2"
 
 allprojects {
     sourceCompatibility = 1.8
@@ -33,15 +33,15 @@ allprojects {
 }
 
 minecraft {
-    version = "1.9.4-12.17.0.1963"
+    version = "1.10.2-12.18.3.2185"
     runDir = "run"
     replace '${version}', project.version
-    mappings = "snapshot_20160518"
+    mappings = "stable_29"
     useDepAts = true
 }
 
 dependencies {
-	compile "net.sengir.forestry:forestry_1.9.4:5.0.9.145"//:api
+	compile "net.sengir.forestry:forestry_1.10.2:5.2.9.247"//:api
 }
 
 repositories{
@@ -101,7 +101,7 @@ curseforge {
     id = '246221'
     changelog = file('changelog.txt')
     releaseType = 'release'
-    addGameVersion '1.9.4'
+    addGameVersion '1.10.2'
 	addGameVersion 'Java 8'
     mainArtifact(jar) {
         displayName = jar.archiveName.replace(".jar", "")
@@ -124,8 +124,8 @@ modsIO {
     key = project.hasProperty("modsioApiKey")? project.modsioApiKey : "empty"
     project{
 		artifact = new File(jar.destinationDir, archivesBaseName+"-"+version+".jar")
-		modid = "0000"
-		minecraft = "1.9.4"
+		modid = "1256"
+		minecraft = "1.10.2"
 		try{changelog = file('changelog.txt').text}catch(Exception e){changelog=""}
 		tag = ""
 		current = true
