--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ minecraft {
 
 dependencies {
 	compile "net.sengir.forestry:forestry_1.10.2:5.2.9.247"//:api
+	deobfCompile group: "mezz.jei", name: "jei_1.10.2", version: "3.14.7.415"
 }
 
 repositories{
