--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,9 @@ repositories{
 	maven { //IC2+Forestry
 		url = "http://maven.ic2.player.to/"
 	}
+	maven { //JEI, Natura, Mantle, TiCon
+        url "http://dvs1.progwml6.com/files/maven"
+    }
 }
 
 processResources
