--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ apply plugin: 'maven-publish'
 
 version = "1.0.0"
 group= "the_fireplace.nabb"
-archivesBaseName = "NewAgeBeeBreeding-1.10.2"
+archivesBaseName = "NewAgeBeeBreeding-1.11.2"
 
 allprojects {
     sourceCompatibility = 1.8
@@ -33,16 +33,16 @@ allprojects {
 }
 
 minecraft {
-    version = "1.10.2-12.18.3.2185"
+    version = "1.11.2-13.20.0.2233"
     runDir = "run"
     replace '${version}', project.version
-    mappings = "stable_29"
+    mappings = "snapshot_20170219"
     //useDepAts = true
 }
 
 dependencies {
-	compile "net.sengir.forestry:forestry_1.10.2:5.2.9.247"//:api
-	deobfCompile group: "mezz.jei", name: "jei_1.10.2", version: "3.14.7.415"
+	compile "net.sengir.forestry:forestry_1.11.2:5.3.2.50"//:api
+	deobfCompile group: "mezz.jei", name: "jei_1.11.2", version: "4.2.3.223"
 }
 
 repositories{
@@ -105,7 +105,7 @@ curseforge {
     id = '246221'
     changelog = file('changelog.txt')
     releaseType = 'release'
-    addGameVersion '1.10.2'
+    addGameVersion '1.11.2'
 	addGameVersion 'Java 8'
     mainArtifact(jar) {
         displayName = jar.archiveName.replace(".jar", "")
@@ -129,7 +129,7 @@ modsIO {
     project{
 		artifact = new File(jar.destinationDir, archivesBaseName+"-"+version+".jar")
 		modid = "1256"
-		minecraft = "1.10.2"
+		minecraft = "1.11.2"
 		try{changelog = file('changelog.txt').text}catch(Exception e){changelog=""}
 		tag = ""
 		current = true
