--- a/build.gradle
+++ b/build.gradle
@@ -11,12 +11,12 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
         classpath 'ModsIOUpload:ModsIOUpload:+'
     }
 }
 plugins {
-    id "com.matthewprenger.cursegradle" version "1.0.8"
+    id "com.matthewprenger.cursegradle" version "1.0.9"
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
 apply plugin: 'net.cazzar.gradle.modsio'
@@ -25,7 +25,7 @@ apply plugin: 'maven-publish'
 
 version = "1.0.1"
 group= "the_fireplace.nabb"
-archivesBaseName = "NewAgeBeeBreeding-1.11.2"
+archivesBaseName = "NewAgeBeeBreeding-1.12.1"
 
 allprojects {
     sourceCompatibility = 1.8
@@ -33,16 +33,17 @@ allprojects {
 }
 
 minecraft {
-    version = "1.11.2-13.20.0.2233"
+    version = "1.12.1-14.22.0.2456"
     runDir = "run"
     replace '${version}', project.version
-    mappings = "snapshot_20170219"
-    //useDepAts = true
+    mappings = "snapshot_20170815"
+	
+	clientRunArgs += "--uuid=0b1ec5ad-cb2a-43b7-995d-889320eb2e5b --username=The_Fireplace"
 }
 
 dependencies {
-	compile "net.sengir.forestry:forestry_1.11.2:5.3.2.50"//:api
-	deobfCompile group: "mezz.jei", name: "jei_1.11.2", version: "4.2.3.223"
+	deobfCompile "net.sengir.forestry:forestry_1.12.1:5.5.0.175"
+	deobfCompile group: "mezz.jei", name: "jei_1.12.1", version: "4.7.5.88"
 }
 
 repositories{
@@ -105,7 +106,8 @@ curseforge {
     id = '246221'
     changelog = file('changelog.txt')
     releaseType = 'release'
-    addGameVersion '1.11.2'
+    addGameVersion '1.12.1'
+    addGameVersion '1.12'
 	addGameVersion 'Java 8'
     mainArtifact(jar) {
         displayName = jar.archiveName.replace(".jar", "")
@@ -129,7 +131,7 @@ modsIO {
     project{
 		artifact = new File(jar.destinationDir, archivesBaseName+"-"+version+".jar")
 		modid = "1256"
-		minecraft = "1.11.2"
+		minecraft = "1.12.1"
 		try{changelog = file('changelog.txt').text}catch(Exception e){changelog=""}
 		tag = ""
 		current = true
