--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ buildscript {
     }
 }
 plugins {
-    id "com.matthewprenger.cursegradle" version "1.0.9"
+    id "com.matthewprenger.cursegradle" version "1.0.10"
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
 apply plugin: 'net.cazzar.gradle.modsio'
@@ -25,7 +25,7 @@ apply plugin: 'maven-publish'
 
 version = "1.0.2"
 group= "the_fireplace.nabb"
-archivesBaseName = "NewAgeBeeBreeding-1.12.1"
+archivesBaseName = "NewAgeBeeBreeding-1.12.2"
 
 allprojects {
     sourceCompatibility = 1.8
@@ -33,7 +33,7 @@ allprojects {
 }
 
 minecraft {
-    version = "1.12.1-14.22.0.2456"
+    version = "1.12.2-14.23.1.2555"
     runDir = "run"
     replace '${version}', project.version
     mappings = "snapshot_20170815"
@@ -42,8 +42,8 @@ minecraft {
 }
 
 dependencies {
-	deobfCompile "net.sengir.forestry:forestry_1.12.1:5.5.0.175"
-	deobfCompile group: "mezz.jei", name: "jei_1.12.1", version: "4.7.5.88"
+	deobfCompile "net.sengir.forestry:forestry_1.12.2:5.8.0.256"
+	deobfCompile group: "mezz.jei", name: "jei_1.12.2", version: "4.8.5.132"
 }
 
 repositories{
@@ -106,6 +106,7 @@ curseforge {
     id = '246221'
     changelog = file('changelog.txt')
     releaseType = 'release'
+    addGameVersion '1.12.2'
     addGameVersion '1.12.1'
     addGameVersion '1.12'
 	addGameVersion 'Java 8'
@@ -131,7 +132,7 @@ modsIO {
     project{
 		artifact = new File(jar.destinationDir, archivesBaseName+"-"+version+".jar")
 		modid = "1256"
-		minecraft = "1.12.1"
+		minecraft = "1.12.2"
 		try{changelog = file('changelog.txt').text}catch(Exception e){changelog=""}
 		tag = ""
 		current = true
